# MLOps

./: .dockerignore  .dvcignore  .gitignore  CHECKLIST_REPORTE_FINAL.md  Dockerfile  EVALUACION_RUBRICA.md  LICENSE  Makefile  README.md  README_COMPLETO.md  REPORTE_FINAL_FASE3.md  VERIFICACION_RAPIDA.ps1  dvc.yaml  estructura.txt  models.dvc  pyproject.toml  requirements.txt  requirements_api.txt  setup.py
.dvc/: config
.github/workflows/: docker-publish.yml
docs/: ML Canvas.pptx  MLCanvas_South_German_Credit.docx  MLOps-Equipo5.-Fase 2pptx.pptx  conf.py  dataset_modifications.md  dvc_pipeline.md
notebooks/: EDA.ipynb  EDA_german_credit.ipynb  EDA_v0_nousar.ipynb  modeling_and_training.ipynb
reports/: data_drift_dashboard.html  performance_comparison.csv  top_features_logreg_mapped.csv  top_features_rf_mapped.csv
scripts/: .gitignore  describe_pipeline_features.py  dvc_preprocess.py  dvc_train.py  export_mlflow_all.py  import_mlflow_to_remote.py  inspect_models.py  main.py  map_feature_names.py  modeling_training.py  predict_&_eval.py  predict_eval.py  preprocessing.py  run_pipeline.ps1
scripts/API/: main_fastapi.py  schemas.py
src/features/: preprocessing_transformer.py  preprocessor.py
src/models/: artifacts.dvc  pipeline_logreg.joblib  pipeline_logreg_v2.joblib  pipeline_logreg_v2.joblib.dvc  pipeline_model.joblib  pipeline_xgboost.joblib  predict_model_v2.py  train_model_v2.py  trainer.py
src/monitoring/: drfit_alerts.py  (+3 more)
tests/: __init__.py  conftest.py  test_api.py  test_integration.py  test_model.py  test_preprocessing.py  test_preprocessor.py
(+14 files in other folders)
