[tool.poetry]
name = "mlops-demo"
version = "0.1.0"
description = "Proyecto de MLOps Tec 2025"
authors = ["Equipo 5"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.115"
uvicorn = { extras = ["standard"], version = "^0.30" }
mlflow = "^2.14"
dvc = { version = "^3.63", extras = ["gdrive"] }
pandas = "^2.2"
scikit-learn = "^1.5"
xgboost = "^2.0"
numpy = "^1.26"
python-dotenv = "^1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
black = "^24.10"
isort = "^5.13"
mypy = "^1.11"
flake8 = "^7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
